# ProjectMitrichev2

./: CMakeLists.txt  DataController.cpp  DataController.h  DataControllerTest.cpp  Dockerfile  GenerateFile.cpp  MainTest.cpp  README.md  docker-compose.yml  index.html  main.cpp  test.cpp
.github/workflow/: build-and-test.yml
.github/workflows/: build-and-test.yml
frontend/: index.html
